[gd_scene load_steps=6 format=2]

[ext_resource path="res://bomb.png" type="Texture" id=1]
[ext_resource path="res://unifont-14.0.03.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://lobby.gd" type="Script" id=3]
[ext_resource path="res://player-base.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="lobby" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 512.0
margin_top = 300.0

[node name="Bomb" type="Sprite" parent="Control"]
position = Vector2( 4, -20 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="prompt" type="Label" parent="Control/Bomb"]
margin_left = -40.6667
margin_top = 12.0
margin_right = 11.3333
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="player-base" parent="." instance=ExtResource( 4 )]
position = Vector2( 211, 307 )
scale = Vector2( 0.9, 0.9 )

[node name="Timer" type="Timer" parent="player-base"]
wait_time = 10.0
autostart = true

[node name="LineEdit" type="LineEdit" parent="player-base"]
margin_left = 111.111
margin_top = 161.111
margin_right = 522.111
margin_bottom = 210.111

[node name="Label" type="Label" parent="."]
margin_left = 7.0
margin_top = 44.0
margin_right = 153.0
margin_bottom = 588.0
text = "
admit
claim
complaint
contact
court
creativity
database
delay
design
enthusiastic
hire
insist
member
official
origin
original
officially
photograph
private
program
rearrange
register
site
warning
break the rules
get off the ground
log on
on purpose
put off
reach an agreement"

[node name="Label2" type="Label" parent="."]
margin_left = 473.0
margin_top = 405.0
margin_right = 513.0
margin_bottom = 419.0

[connection signal="timeout" from="player-base/Timer" to="." method="_on_Timer_timeout"]
[connection signal="text_entered" from="player-base/LineEdit" to="." method="_on_LineEdit_text_entered"]
